# snakr

./: .gitignore  Justfile  pyproject.toml
src/snakr/: parser.py  renderer.py  tree.py
src/snakr/entrypoints/: cli.py
tests/: __init__.py  test_parser.py
