[project]
name = "snakr"
version = "0.1.0"
description = "Crawl and visualize python dependencies"
readme = "README.md"
authors = [
    { name = "Alvaro Clemente", email = "clemente.varo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7.0",
    "networkx>=3.2.1"
]

[project.scripts]
snakr = "snakr.entrypoints.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# sort imports
extend-select = ["I"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "pygraphviz>=1.14",
    "ipython>=9.3.0",
]
